--- a/main.html
+++ b/main.html
@@ -9,8 +9,22 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+	</script>
+	<nav>
+	<ul>
+		<li><a href="https://course.acciojob.com/modules">Home</a</li>
+				<li><a href="https://course.acciojob.com/modules">About us</a</li>
+		<li><a href="https://course.acciojob.com/modules">Contact us</a</li>
+		
+	</ul>
+</nav>
+	<h3>3 random images</h3>
+	<img src="https://picsum.photos/id/123/200/300" alt="">
+		<img src="https://picsum.photos/id/124/200/300" alt="">
+	<img src="https://picsum.photos/id/125/200/300" alt="">
+
 
 </body>
+</html>
 
 </html>
